--- a/Fiberneo-Document/Admin-Guide/11_09_2025.md
+++ b/Fiberneo-Document/Admin-Guide/11_09_2025.md
@@ -32,74 +32,89 @@ This guide helps operators and admins configure the FIBERNEO after deployment.
 ### 3. Component Configuration and Permissions
 
 - Go to Admin module → Access management → Component management.
+
 <div align="left">
-<image src="../Image/ComponentManagementHome.png" alt="User Login Request Flow" height="500" 
+<image src="../Image/ComponentManagementHome.png" alt="User Login Request Flow" height="300" 
 style="background: transparent;">
 </div>
+
 - Upload the Updated Swagger Json for Fiberneo.
+
 <div align="left">
-<image src="../Image/SwaggerUpload.png" alt="User Login Request Flow" height="500" 
+<image src="../Image/SwaggerUpload.png" alt="User Login Request Flow" height="300" 
 style="background: transparent;">
 </div>
 
 #### 3.1 Permissions
 
 - Import permissions for each component (e.g., Area, Link, Site).
+
 <div align="left">
-<image src="../Image/ComponentManagementModuleView.png" alt="User Login Request Flow" height="500" 
+<image src="../Image/ComponentManagementModuleView.png" alt="User Login Request Flow" height="300" 
 style="background: transparent;">
 </div>
+
 - Click Edit to navigate to the component edit page than add Permission According to Module.
+
 <div align="left">
-<image src="../Image/ModulePermission View.png" alt="User Login Request Flow" height="500" 
+<image src="../Image/ModulePermission View.png" alt="User Login Request Flow" height="300" 
 style="background: transparent;">
 </div>
+
 - Click Import and upload the permissions file(s).
 - After import, confirm permissions reflect in the UI.
 
 #### 3.2 Multilingual
 
 - For multi-language support, go to Product config → Multilingual.
+
 <div align="left">
-<image src="../Image/MultilingualHome.png" alt="User Login Request Flow" height="500" 
+<image src="../Image/MultilingualHome.png" alt="User Login Request Flow" height="300" 
 style="background: transparent;">
 </div>
 
 - Click Import and upload the multilingual Excel sheet.
+
 <div align="left">
-<image src="../Image/Multilingual.png" alt="User Login Request Flow" height="500" 
+<image src="../Image/Multilingual.png" alt="User Login Request Flow" height="300" 
 style="background: transparent;">
 </div>
 
 ### 4. Builder Module Configuration
 
 Go to Builder, navigate to subsections to import and wire up your FIBERNEO UI.
+
 <div align="left">
-<image src="../Image/builder_search.png" alt="User Login Request Flow" height="500" 
+<image src="../Image/builder_search.png" alt="User Login Request Flow" height="300" 
 style="background: transparent;">
 </div>
 
 #### 4.1 Pages
 
 - Click Import Pages and upload the Pages file(s).
+
 <div align="left">
-<image src="../Image/PageImport.png" alt="User Login Request Flow" height="500" 
+<image src="../Image/PageImport.png" alt="User Login Request Flow" height="300" 
 style="background: transparent;">
 </div>
+
 - After successful import, search for application name "FIBERNEO" to see the list of pages.
 
 #### 4.2 Forms
 
 - Go to Forms in the Builder module.
+
 <div align="left">
-<image src="../Image/FoamHome.png" alt="User Login Request Flow" height="500" 
+<image src="../Image/FoamHome.png" alt="User Login Request Flow" height="300" 
 style="background: transparent;">
 </div>
+
 - Open Form Designer.
 
 - Click Import and upload the Forms file(s).
+
 <div align="left">
-<image src="../Image/FoamImport.png" alt="User Login Request Flow" height="500" 
+<image src="../Image/FoamImport.png" alt="User Login Request Flow" height="300" 
 style="background: transparent;">
 </div>
 
@@ -108,8 +123,9 @@ style="background: transparent;">
 
 - Go to Lists in the Builder module and click Import.
 - Upload the Lists file(s).
+
 <div align="left">
-<image src="../Image/ListImport.png" alt="User Login Request Flow" height="500" 
+<image src="../Image/ListImport.png" alt="User Login Request Flow" height="300" 
 style="background: transparent;">
 </div>
 
@@ -117,8 +133,9 @@ style="background: transparent;">
 
 - Go to HTML Templates in the Builder module and click Import.
 - Upload the HTML Template file(s).
+
 <div align="left">
-<image src="../Image/HtmlImport.png" alt="User Login Request Flow" height="500" 
+<image src="../Image/HtmlImport.png" alt="User Login Request Flow" height="300" 
 style="background: transparent;">
 </div>
 
@@ -127,20 +144,32 @@ style="background: transparent;">
 - Go to Notifications in the Builder module.
 - From the dashboard, navigate to the list and click Import.
 - Upload the Notification Template file(s).
+
 <div align="left">
-<image src="../Image/NotificationTemplateImport.png" alt="User Login Request Flow" height="500" 
+<image src="../Image/NotificationTemplateImport.png" alt="User Login Request Flow" height="300" 
 style="background: transparent;">
 </div>
 
 #### 4.6 Workflows
 
 - Navigate to the Workflow module and click Import.
+
 <div align="left">
-<image src="../Image/WorkFlowImport.png" alt="User Login Request Flow" height="500" 
+<image src="../Image/WorkFlowImport.png" alt="User Login Request Flow" height="300" 
 style="background: transparent;">
 </div>
+
 - When prompted, complete the required details in the pop-up dialog and upload the workflow file(s). 
+
 <div align="left">
-<image src="../Image/WorkFlowImportFoam.png" alt="User Login Request Flow" height="500" 
+<image src="../Image/WorkFlowImportFoam.png" alt="User Login Request Flow" height="300" 
 style="background: transparent;">
 </div>
+
+## Note  
+
+All the necessary import data required for configuration and smooth deployment is available at the following location:  
+
+[Admin Guide Data](https://github.com/BhavikVisionGit/Fiberneo-Documents/blob/main/Fiberneo-Document/Admin_Guide_Data/)  
+
+Please fetch the data from this path to proceed with the Fiberneo deployment.  
