--- a/Fiberneo-Document/Admin-Guide/11_09_2025.md
+++ b/Fiberneo-Document/Admin-Guide/11_09_2025.md
@@ -1,4 +1,4 @@
-## FIBERNEO Post-Deployment Configuration Guide
+# FIBERNEO Post-Deployment Configuration Guide
 
 This guide helps operators and admins configure the FIBERNEO after deployment.
 
@@ -38,6 +38,7 @@ This guide helps operators and admins configure the FIBERNEO after deployment.
 style="background: transparent;">
 </div>
 
+
 - Upload the Updated Swagger Json for Fiberneo.
 
 <div align="left">
@@ -54,12 +55,14 @@ style="background: transparent;">
 style="background: transparent;">
 </div>
 
+
 - Click Edit to navigate to the component edit page than add Permission According to Module.
 
 <div align="left">
 <image src="../Image/ModulePermission View.png" alt="User Login Request Flow" height="300" 
 style="background: transparent;">
 </div>
+
 
 - Click Import and upload the permissions file(s).
 - After import, confirm permissions reflect in the UI.
@@ -73,6 +76,7 @@ style="background: transparent;">
 style="background: transparent;">
 </div>
 
+
 - Click Import and upload the multilingual Excel sheet.
 
 <div align="left">
@@ -80,16 +84,26 @@ style="background: transparent;">
 style="background: transparent;">
 </div>
 
-### 4. Builder Module Configuration
+### 4. BaseConfiguration
+
+-- Go to Administration > Product Config > BaseConfiguration
+-- Import the Configuration using Right User Credential
+
+<div align="left">
+<image src="../Image/BaseConfiguration.png" alt="User Login Request Flow" height="300" 
+style="background: transparent;">
+</div>
+
+### 5. Builder Module Configuration
 
 Go to Builder, navigate to subsections to import and wire up your FIBERNEO UI.
 
 <div align="left">
-<image src="../Image/builder_search.png" alt="User Login Request Flow" height="300" 
+<image src="../Image/BuilderSearch.png" alt="User Login Request Flow" height="300" 
 style="background: transparent;">
 </div>
 
-#### 4.1 Pages
+#### 5.1 Pages
 
 - Click Import Pages and upload the Pages file(s).
 
@@ -100,7 +114,7 @@ style="background: transparent;">
 
 - After successful import, search for application name "FIBERNEO" to see the list of pages.
 
-#### 4.2 Forms
+#### 5.2 Forms
 
 - Go to Forms in the Builder module.
 
@@ -119,7 +133,7 @@ style="background: transparent;">
 </div>
 
 
-#### 4.3 Lists (Grids/Tables)
+#### 5.3 Lists (Grids/Tables)
 
 - Go to Lists in the Builder module and click Import.
 - Upload the Lists file(s).
@@ -129,7 +143,7 @@ style="background: transparent;">
 style="background: transparent;">
 </div>
 
-#### 4.4 HTML Templates (Advanced UI/Logic)
+#### 5.4 HTML Templates (Advanced UI/Logic)
 
 - Go to HTML Templates in the Builder module and click Import.
 - Upload the HTML Template file(s).
@@ -139,7 +153,7 @@ style="background: transparent;">
 style="background: transparent;">
 </div>
 
-#### 4.5 Notification Templates
+#### 5.5 Notification Templates
 
 - Go to Notifications in the Builder module.
 - From the dashboard, navigate to the list and click Import.
@@ -150,7 +164,7 @@ style="background: transparent;">
 style="background: transparent;">
 </div>
 
-#### 4.6 Workflows
+#### 5.6 Workflows
 
 - Navigate to the Workflow module and click Import.
 
@@ -158,6 +172,7 @@ style="background: transparent;">
 <image src="../Image/WorkFlowImport.png" alt="User Login Request Flow" height="300" 
 style="background: transparent;">
 </div>
+
 
 - When prompted, complete the required details in the pop-up dialog and upload the workflow file(s). 
 
