Update and LLD create

--- a/Fiberneo-Document/Admin-Guide/11_09_2025.md
+++ b/Fiberneo-Document/Admin-Guide/11_09_2025.md
@@ -38,6 +38,12 @@ This guide helps operators and admins configure the FIBERNEO after deployment.
 style="background: transparent;">
 </div>
 
+- Click Import and upload the Components file(s).
+
+<div align="left">
+<image src="../Image/ComponentImport.png" alt="User Login Request Flow" height="300" 
+style="background: transparent;">
+</div>
 
 - Upload the Updated Swagger Json for Fiberneo.
 
